Fix gallery nav arrow cutoff

--- a/src/components/Work.scss
+++ b/src/components/Work.scss
@@ -37,7 +37,7 @@
     background: none;
 	color: inherit;
 	border: none;
-	padding: 0;
+	padding: 0 5px 0 0;
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
